# music-exercises-python

./: Pipfile  README.md  exercises.py  pyproject.toml  setup.py
music_exercises/: __init__.py  accidentals.py  intervals.py
