[tool.poetry]
name = "music-exercises-python"
version = "0.1.0"
description = ""
authors = ["David Sere <dave@d53dev.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
mido = "^1.2.9"
python-rtmidi = "^1.4.0"
blessings = "^1.7"
libsixel-python = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.761"
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
